# rush

./: .gitignore  Cargo.toml  README.md  docker-completer.sh  your_program.sh
.codecrafters/: run.sh
src/: main.rs  parse.rs  readline.rs  redirect.rs  variables.rs
