[package]
name = "rush"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[dependencies]
#anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
regex = "1.12.3"
rustyline = "18.0.0"
#thiserror = "1.0.38"                             # error handling

[profile.release]
debug = "full"
